# playground-api

./: .gitignore  Cargo.toml  README.md  db-setup.mongodb
.cargo/: config
partial-struct/: Cargo.toml
partial-struct/src/: lib.rs  structs.rs
playground-api/: Cargo.toml
playground-api/src/: console.rs  http.rs  main.rs  string.rs
playground-api/src/api/: google.rs  mod.rs
playground-api/src/auth/: google.rs  jwt.rs  mod.rs  oauth.rs  session.rs
playground-api/src/db/: mod.rs  models.rs  users.rs
playground-api/src/db/files/: aggregations.rs  mod.rs  queries.rs  system.rs  tests.rs
playground-api/src/routes/: files.rs  users.rs
playground-api/src/tests/: files.rs  mod.rs
playground-api/src/websockets/: channel.rs  event.rs  file_watcher.rs  mod.rs
src/: api.rs  console.rs  db.rs  http.rs  main.rs  routes.rs  string.rs
src/auth/: google.rs  jwt.rs  mod.rs  oauth.rs  session.rs
src/db/: mod.rs  models.rs
