[package]
name = "playground-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["headers"] }
chrono = "0.4.23"
jsonwebtoken = "8.2.0"
mongodb = "2.3.1"
oauth2 = "4.3.0"
once_cell = "1.17.0"
reqwest = { version = "0.11.13", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors"] }
